# libukrypto

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.travis/: build.sh  cross.sh  deps.sh  docker_build.sh  openssl.sh
CMakeModules/: FindCheck.cmake
src/: dstu_ecdsa.h  e_dstu4145.c  e_ukrypto.c  gost_34.311-95.c  gost_dsa.h  gost_hash.c  gost_hash.h  hash.c  kalyna.c  kalyna.h  kupyna.h  legacy.c  legacy.h  libdstu4145.h  libukrypto.h  macros.h  magma.c  magma.h  ukrypto.h
tests/: test_ciphers.c  test_dstu4145.c  test_gost_34.311-95.c  test_hashing.c  test_openssl_engine.sh  test_openssl_linkage.c
